# ags-hield-network-build

./: README.md  hardhat.config.js  package.json  pnpm-lock.yaml
ai-models/: requirements.txt  train.sh  train_threat_detector.py
app/: layout.tsx  page.tsx
app/gamification/: page.tsx
app/offline/: page.tsx
app/staking/: page.tsx
components/: alerts-feed.tsx  dashboard-header.tsx  gamification-dashboard.tsx  network-status.tsx  node-manager.tsx  staking-interface.tsx  threat-monitor.tsx  tokenomics-panel.tsx
contracts/: CrossChainRelay.sol  DAGGameification.sol  DAGGovernance.sol  DAGOracle.sol  DAGShield.sol  DAGStaking.sol  DAGToken.sol
node-client/: Cargo.toml  Dockerfile  Makefile  config.toml  docker-compose.yml
node-client/src/: ai.rs  blockchain.rs  config.rs  cross_chain.rs  dag.rs  energy.rs  main.rs  node.rs  oracle.rs
public/: manifest.json  sw.js
scripts/: deploy-full-network.js  deploy-oracle.js  deploy.js  network-monitor.js  run-tests.sh
test/: DAGShield-Integration.test.js  DAGShield.test.js
